# renfe-navigation

./: .cursorignore  .gitignore  Makefile  README.md  playwright.config.py  playwright_config.py  pyproject.toml  pytest.ini  requirements.txt
app/: main.py  parser.py  renfe.py  renfe_common.py  search_trains_flow_service.py  search_trains_service.py
app/resources/: estaciones.json  listatrenesida.html  train_response_example.json
tests/: conftest.py  test_api_endpoint.py  test_fixed_parser_train_lists.py  test_parser.py
tests/fixtures/: README.md  renfe_response_sample.html
tests_playwright/: README.md  conftest.py  test_search_flow.py
